--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -7,8 +7,8 @@ server {
     listen 443 ssl;
     server_name localhost;
 
-    ssl_certificate /etc/nginx/selfsigned.crt;
-    ssl_certificate_key /etc/nginx/selfsigned.key;
+    ssl_certificate /etc/nginx/ssl/selfsigned.crt;
+    ssl_certificate_key /etc/nginx/ssl/selfsigned.key;
 
     index index.php index.htm index.html;
     error_log /var/log/nginx/error.log;
@@ -17,9 +17,9 @@ server {
     root /var/www/public;
 
     location / {
-        try_files $uri $uri/ /index.php?$query_string;
-        try_files $uri = 404;
+        try_files $uri $uri/ /index.php?$query_string =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_intercept_errors on;
         fastcgi_pass app:9000;
         fastcgi_index index.php;
         include fastcgi_params;
